@@ -9,13 +9,12 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Profile;
 import org.springframework.test.context.ActiveProfiles;
 import ru.mts.AnimalsProperties;
 import ru.mts.bpp.CreateAnimalServiceBeanPostProcessor;
 import ru.mts.model.*;
-import ru.mts.repository.AnimalsRepositoryImpl;
 import ru.mts.repository.AnimalsRepository;
+import ru.mts.repository.AnimalsRepositoryImpl;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
@@ -23,7 +22,8 @@ import java.time.LocalDate;
 import java.util.*;
 import java.util.concurrent.ThreadLocalRandom;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.doCallRealMethod;
 import static org.mockito.Mockito.when;
 
@@ -32,7 +32,7 @@ import static org.mockito.Mockito.when;
 @ActiveProfiles("test")
 public class SpringBootStarterTestClass {
     Animal cat1, cat2, cat3, dog1, wolf1, wolf2, shark1;
-    Map<String, List<Animal>> animals;
+    Map<AnimalEnum, List<Animal>> animals;
 
     private AnimalsRepository animalsRepository;
     @Autowired
@@ -42,19 +42,24 @@ public class SpringBootStarterTestClass {
     @MockBean
     private CreateAnimalServiceImpl createAnimalService;
 
-
+    /**
+     * РњРµС‚РѕРґ РґР»СЏ РёРЅРёС†РёР°Р»РёР·Р°С†РёРё Р¶РёРІРѕС‚РЅС‹С…
+     *
+     * @author Nikita
+     * @since 1.4
+     */
     private void initAnimals() {
-        cat1 = new Cat("Британская", animalsProperties.getCatNames().get(1), BigDecimal.valueOf(10000).setScale(2, RoundingMode.HALF_UP), "Добрый", LocalDate.now().minusYears(10).minusDays(1));
-        cat2 = new Cat("Шотландская", animalsProperties.getCatNames().get(0), BigDecimal.valueOf(12000.05).setScale(2, RoundingMode.HALF_UP), "Верный", LocalDate.of(2013, 4, 18));
-        cat3 = new Cat("Сфинкс", animalsProperties.getCatNames().get(2), BigDecimal.valueOf(7000.2).setScale(2, RoundingMode.HALF_UP), "Вредный", LocalDate.of(2008, 9, 9));
+        cat1 = new Cat("Р‘СЂРёС‚Р°РЅСЃРєР°СЏ", animalsProperties.getCatNames().get(1), BigDecimal.valueOf(10000).setScale(2, RoundingMode.HALF_UP), "пїЅпїЅпїЅпїЅпїЅпїЅ", LocalDate.now().minusYears(10).minusDays(1));
+        cat2 = new Cat("РЁРѕС‚Р»Р°РЅРґСЃРєР°СЏ", animalsProperties.getCatNames().get(0), BigDecimal.valueOf(12000.05).setScale(2, RoundingMode.HALF_UP), "пїЅпїЅпїЅпїЅпїЅпїЅ", LocalDate.of(2013, 4, 18));
+        cat3 = new Cat("РЎС„РёРЅРєСЃ", animalsProperties.getCatNames().get(2), BigDecimal.valueOf(7000.2).setScale(2, RoundingMode.HALF_UP), "пїЅпїЅпїЅпїЅпїЅпїЅпїЅ", LocalDate.of(2008, 9, 9));
 
-        dog1 = new Dog("Доберман", animalsProperties.getDogNames().get(ThreadLocalRandom.current().nextInt(3)), BigDecimal.valueOf(25000).setScale(2, RoundingMode.HALF_UP), "Злой", LocalDate.now().minusYears(10));
+        dog1 = new Dog("Р”РѕР±РµСЂРјР°РЅ", animalsProperties.getDogNames().get(ThreadLocalRandom.current().nextInt(3)), BigDecimal.valueOf(25000).setScale(2, RoundingMode.HALF_UP), "пїЅпїЅпїЅпїЅ", LocalDate.now().minusYears(10));
 
-        wolf1 = new Wolf("Японский", animalsProperties.getWolfNames().get(ThreadLocalRandom.current().nextInt(3)), BigDecimal.valueOf(500000).setScale(2, RoundingMode.HALF_UP), "Игривый", LocalDate.now().minusYears(10).plusDays(1));
-        wolf2 = new Wolf("Полярный", animalsProperties.getWolfNames().get(ThreadLocalRandom.current().nextInt(3)), BigDecimal.valueOf(700000.157).setScale(2, RoundingMode.HALF_UP), "Игривый", LocalDate.of(1997, 2, 1));
+        wolf1 = new Wolf("РЇРїРѕРЅСЃРєРёР№", animalsProperties.getWolfNames().get(ThreadLocalRandom.current().nextInt(3)), BigDecimal.valueOf(500000).setScale(2, RoundingMode.HALF_UP), "пїЅпїЅпїЅпїЅпїЅпїЅпїЅ", LocalDate.now().minusYears(10).plusDays(1));
+        wolf2 = new Wolf("РџРѕР»СЏСЂРЅС‹Р№", animalsProperties.getWolfNames().get(ThreadLocalRandom.current().nextInt(3)), BigDecimal.valueOf(700000.157).setScale(2, RoundingMode.HALF_UP), "пїЅпїЅпїЅпїЅпїЅпїЅпїЅ", LocalDate.of(1997, 2, 1));
 
-        shark1 = new Shark("Молот", animalsProperties.getSharkNames().get(ThreadLocalRandom.current().nextInt(3)), BigDecimal.valueOf(1000000).setScale(2, RoundingMode.HALF_UP), "Пугливый", LocalDate.of(1996, 6, 13));
-        }
+        shark1 = new Shark("РњРѕР»РѕС‚", animalsProperties.getSharkNames().get(ThreadLocalRandom.current().nextInt(3)), BigDecimal.valueOf(1000000).setScale(2, RoundingMode.HALF_UP), "пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ", LocalDate.of(1996, 6, 13));
+    }
 
     @DisplayName("Test methods for creating animals")
     @ParameterizedTest(name = "Test {arguments}")
@@ -62,8 +67,7 @@ public class SpringBootStarterTestClass {
     public void starterTest(int value) {
         animalsRepository = new AnimalsRepositoryImpl(createAnimalService);
 
-        // изменение поведения MockBean
-        when(createAnimalService.receiveAnimalType()).thenCallRealMethod();
+        when(createAnimalService.receiveAnimalTypes()).thenCallRealMethod();
         when(createAnimalService.receiveCreatedAnimals()).thenCallRealMethod();
         doCallRealMethod().when(createAnimalService).defineTypeOfAnimals();
 
@@ -71,52 +75,44 @@ public class SpringBootStarterTestClass {
         animals = new HashMap<>(4);
         switch (value) {
             case 0:
-                // корректный вариант
-                animals.put("Cat", List.of(cat1, cat3, cat2));
-                animals.put("Dog", List.of(dog1));
-                animals.put("Wolf", List.of(wolf1, wolf2));
-                animals.put("Shark", List.of(shark1));
+                animals.put(AnimalEnum.CAT, Arrays.asList(cat1, cat3, cat2));
+                animals.put(AnimalEnum.DOG, Arrays.asList(dog1));
+                animals.put(AnimalEnum.WOLF, Arrays.asList(wolf1, wolf2));
+                animals.put(AnimalEnum.SHARK, Arrays.asList(shark1));
                 break;
             case 1:
-                // корректный вариант c наличием пустых списков
-                animals.put("Cat", List.of(cat1, cat3, cat2));
-                animals.put("Wolf", List.of(wolf1, wolf2));
-                animals.put("Shark", new ArrayList<>());
+                animals.put(AnimalEnum.CAT, Arrays.asList(cat1, cat3, cat2));
+                animals.put(AnimalEnum.WOLF, Arrays.asList(wolf1, wolf2));
+                animals.put(AnimalEnum.SHARK, new ArrayList<>());
                 break;
             case 2:
-                // вариант, когда список содержит null-значения
-                animals.put("Shark", List.of(shark1));
-                animals.put("Dog", new ArrayList<>());
-                animals.put("Wolf", Arrays.asList(wolf1, null));
-                animals.put("Cat", new ArrayList<>());
+                animals.put(AnimalEnum.SHARK, Arrays.asList(shark1));
+                animals.put(AnimalEnum.DOG, new ArrayList<>());
+                animals.put(AnimalEnum.WOLF, Arrays.asList(wolf1, null));
+                animals.put(AnimalEnum.CAT, new ArrayList<>());
                 break;
             case 3:
-                // вариант, когда все списки пустые
-                animals.put("Cat", new ArrayList<>());
-                animals.put("Dog", new ArrayList<>());
-                animals.put("Wolf", new ArrayList<>());
-                animals.put("Shark", new ArrayList<>());
+                animals.put(AnimalEnum.CAT, new ArrayList<>());
+                animals.put(AnimalEnum.DOG, new ArrayList<>());
+                animals.put(AnimalEnum.WOLF, new ArrayList<>());
+                animals.put(AnimalEnum.SHARK, new ArrayList<>());
                 break;
             case 4:
-                // вариант, когда value равно null
-                animals.put("Cat", null);
-                animals.put("Dog", new ArrayList<>());
-                animals.put("Wolf", new ArrayList<>());
-                animals.put("Shark", new ArrayList<>());
+                animals.put(AnimalEnum.CAT, null);
+                animals.put(AnimalEnum.DOG, new ArrayList<>());
+                animals.put(AnimalEnum.WOLF, new ArrayList<>());
+                animals.put(AnimalEnum.SHARK, new ArrayList<>());
                 break;
             case 5:
-                // вариант, когда key равен null
-                animals.put(null, new ArrayList<>());
-                animals.put("Dog", new ArrayList<>());
-                animals.put("Wolf", new ArrayList<>());
-                animals.put("Shark", new ArrayList<>());
+                animals.put(null, Arrays.asList(cat1));
+                animals.put(AnimalEnum.DOG, Arrays.asList(dog1));
+                animals.put(AnimalEnum.WOLF, new ArrayList<>());
+                animals.put(AnimalEnum.SHARK, new ArrayList<>());
                 break;
             case 6:
-                // вариант, когда мапа равна null
                 animals = null;
                 break;
             case 7:
-                // вариант, когда мапа пустая
                 break;
             default:
                 throw new IllegalStateException("Unexpected value: " + value);
@@ -124,15 +120,14 @@ public class SpringBootStarterTestClass {
 
         when(createAnimalService.createAnimals()).thenReturn(animals);
 
-        if (value == 4 || value == 5 || value == 6) {
+        if (value == 4 || value == 6) {
             assertThrows(NullPointerException.class, () -> {
                 createAnimalServiceBeanPostProcessor.postProcessAfterInitialization(createAnimalService, "createAnimalService");
             });
-        }
-        else {
+        } else {
             createAnimalServiceBeanPostProcessor.postProcessAfterInitialization(createAnimalService, "createAnimalService");
             animalsRepository.fillStorage();
-            assertEquals(animals, animalsRepository.getAnimalsMap());
+            assertEquals(animals, animalsRepository.getAnimalStorage());
         }
     }
 
